tolk-tester/tests/invalid-syntax/err-3997.tolk
const cc = 0x___

/**
@compilation_should_fail
@stderr invalid integer constant
 */
